--- a/index.html
+++ b/index.html
@@ -458,37 +458,33 @@
 
           <div class="footer-subscribe">
             <p class="social-media-text">Subscribe</p>
-            <ul class="subscribe-list">
-              <li>
+            <form class="subscribe-form">
+              <label for="" class="subscribe-label">
                 <input
                   type="email"
                   name="email"
                   placeholder="E-mail"
                   class="email-footer"
                 />
-              </li>
-              <li>
-                <button type="submit" class="subscribe-svg">
-                  Subscribe
-                  <svg class="send" width="24" height="24">
-                    <use href="./images/icons.svg#icon-send"></use>
-                  </svg>
-                </button>
-              </li>
-            </ul>
+              </label>
+              <button type="submit" class="subscribe-svg">
+                Subscribe
+                <svg class="send" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </footer>
 
-      <div class="modal-overlay">
+      <div class="modal-overlay is-open">
         <div class="modal">
-          <div class="div-close-button">
-            <button type="button" class="close-button">
-              <svg class="close-icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close"></use>
-              </svg>
-            </button>
-          </div>
+          <button type="button" class="close-button">
+            <svg class="close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
           <p class="form-text">Leave your contacts and we will call you back</p>
           <form
             class="form-modal"
@@ -496,62 +492,72 @@
             autocomplete="off"
             novalidate
           >
-            <label for="name" class="label-form">Name</label>
-            <div class="input-wrap">
+            <div class="form-container">
+              <label for="user-name" class="label-form">Name</label>
+              <div class="input-wrap">
+                <input
+                  type="text"
+                  name="user-name"
+                  id="user-name"
+                  class="input-form"
+                />
+                <svg class="svg-form" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
+            </div>
+
+            <div class="form-container">
+              <label for="phone" class="label-form">Phone</label>
+              <div class="input-wrap">
+                <input type="tel" name="phone" id="phone" class="input-form" />
+                <svg class="svg-form" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </div>
+
+            <div class="form-container">
+              <label for="mail" class="label-form">Email</label>
+              <div class="input-wrap">
+                <input type="email" name="mail" id="mail" class="input-form" />
+                <svg class="svg-form" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
+            </div>
+
+            <div class="comment-container">
+              <label for="user-comment" class="label-form">Comment</label>
+              <textarea
+                name="user-comment"
+                id="user-comment"
+                placeholder="Text input"
+                class="textarea-form"
+              ></textarea>
+            </div>
+
+            <div class="privacy-policy">
               <input
-                type="text"
-                name="name"
-                id="name"
-                autofocus
-                class="input-form"
+                type="checkbox"
+                class="checkbox-input visually-hidden"
+                id="user-privacy"
+                value="true"
+                name="user-privacy"
               />
-              <svg class="svg-form" width="18" height="24">
-                <use href="./images/icons.svg#icon-person"></use>
-              </svg>
+              <label for="user-privacy" class="label-privacy">
+                <span class="span-label">
+                  <svg class="checkmark" width="10" height="8">
+                    <use href="./images/icons.svg#icon-check"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a href="" class="privacy-link">Privacy Policy</a>
+              </label>
             </div>
 
-            <label for="phone" class="label-form">Phone</label>
-            <div class="input-wrap">
-              <input type="tel" name="phone" id="phone" class="input-form" />
-              <svg class="svg-form" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone"></use>
-              </svg>
-            </div>
-
-            <label for="mail" class="label-form">Email</label>
-            <div class="input-wrap">
-              <input type="email" name="mail" id="mail" class="input-form" />
-              <svg class="svg-form" width="18" height="24">
-                <use href="./images/icons.svg#icon-email"></use>
-              </svg>
-            </div>
-
-            <label for="comment" class="label-form">Comment</label>
-            <textarea
-              name="comment"
-              id="comment"
-              placeholder="Text input"
-              class="textarea-form"
-            ></textarea>
-          </form>
-
-          <div class="privacy-policy">
-            <input type="checkbox" class="visually-hidden" />
-            <span class="span-check">
-              <svg class="checkmark" width="10" height="8">
-                <use href="./images/icons.svg#icon-check"></use>
-              </svg>
-            </span>
-            <label class="privacy-policy-text">
-              I accept the terms and conditions of the
-              <span class="privacy-policy-span"
-                ><a href="">Privacy Policy</a></span
-              >
-            </label>
-          </div>
-          <div class="button-area">
             <button type="submit" class="send-button">Send</button>
-          </div>
+          </form>
         </div>
       </div>
     </div>
