--- a/index.html
+++ b/index.html
@@ -459,12 +459,13 @@
           <div class="footer-subscribe">
             <p class="social-media-text">Subscribe</p>
             <form class="subscribe-form">
-              <label for="" class="subscribe-label">
+              <label for="email" class="subscribe-label">
                 <input
                   type="email"
                   name="email"
                   placeholder="E-mail"
                   class="email-footer"
+                  id="email"
                 />
               </label>
               <button type="submit" class="subscribe-svg">
