add margin and padding

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
           </svg>
         </button>
         <p class="form-text">Leave your contacts and we will call you back</p>
-        <form class="form-modal" name="contacts" autocomplete="off" novalidate>
+        <form name="contacts" autocomplete="off" novalidate>
           <div class="form-container">
             <label for="user-name" class="label-form">Name</label>
             <div class="input-wrap">
