--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <header class="had-container">
       <div class="container container-nav">
         <nav class="container-nav">
-          <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
+          <a class="logo header-logo" href="./index.html">
+            Web<span>Studio</span>
+          </a>
           <ul class="nav">
             <li>
               <a class="nav-menu current" href="./index.html">Studio</a>
@@ -44,8 +46,81 @@
             </li>
           </ul>
         </address>
+
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
+
+    <div class="mobile-menu is-open">
+        <div class="container mobile-menu-container">
+          <button type="button" class="close-button">
+            <svg class="close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <nav class="mobile-menu-nav">
+            <ul class="menu-nav-list">
+              <li>
+                <a class="nav-menu-link current" href="./index.html">Studio</a>
+              </li>
+              <li><a class="nav-menu-link" href="">Portfolio</a></li>
+              <li><a class="nav-menu-link" href="">Contacts</a></li>
+            </ul>
+          </nav>
+
+          <span>
+            <ul class="address-menu-container">
+              <li>
+                <a class="menu-tel-mail" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a class="menu-tel-mail" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </span>
+          
+          <ul class="social-menu-list">
+                  <li class="social-icon-list">
+                    <a href="" class="social-menu-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-list">
+                    <a href="" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-list">
+                    <a href="" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-icon-list">
+                    <a href="" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+          </div>     
+        </div>
+      </div>
 
     <main>
       <section class="solutions-block">
@@ -112,7 +187,7 @@
       </section>
 
       <section class="our-team-section">
-        <div class="container continer-team">
+        <div class="container container-team">
           <h2 class="our-team">Our Team</h2>
           <ul class="our-team-list">
             <li class="our-team-people">
@@ -478,7 +553,7 @@
       </div>
     </footer>
 
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button type="button" class="close-button">
           <svg class="close-icon" width="8" height="8">
@@ -546,8 +621,10 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="privacy-link">Privacy Policy</a>
+              <span class="privacy-span">
+                I accept the terms and conditions of the
+                <a href="" class="privacy-link">Privacy Policy</a>
+              </span>
             </label>
           </div>
 
