--- a/index.html
+++ b/index.html
@@ -55,72 +55,71 @@
       </div>
     </header>
 
-    <div class="mobile-menu is-open">
-        <div class="container mobile-menu-container">
-          <button type="button" class="close-button">
-            <svg class="close-icon" width="8" height="8">
-              <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-          </button>
+    <div class="mobile-menu">
+      <div class="container mobile-menu-container">
+        <button type="button" class="close-button">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
 
-          <nav class="mobile-menu-nav">
-            <ul class="menu-nav-list">
-              <li>
-                <a class="nav-menu-link current" href="./index.html">Studio</a>
-              </li>
-              <li><a class="nav-menu-link" href="">Portfolio</a></li>
-              <li><a class="nav-menu-link" href="">Contacts</a></li>
-            </ul>
-          </nav>
+        <nav class="mobile-menu-nav">
+          <ul class="menu-nav-list">
+            <li>
+              <a class="nav-menu-link current" href="./index.html">Studio</a>
+            </li>
+            <li><a class="nav-menu-link" href="">Portfolio</a></li>
+            <li><a class="nav-menu-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-          <span>
-            <ul class="address-menu-container">
-              <li>
-                <a class="menu-tel-mail" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-              <li>
-                <a class="menu-tel-mail" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
-          </span>
-          
-          <ul class="social-menu-list">
-                  <li class="social-icon-list">
-                    <a href="" class="social-menu-link">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-icon-list">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-icon-list">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-icon-list">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-          </div>     
+        <div>
+          <ul class="address-menu-container">
+            <li>
+              <a class="menu-tel-mail" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a class="menu-tel-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
         </div>
+
+        <ul class="social-menu-list">
+          <li class="social-icon-list">
+            <a href="" class="social-menu-link">
+              <svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icon-list">
+            <a href="" class="social-link">
+              <svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icon-list">
+            <a href="" class="social-link">
+              <svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icon-list">
+            <a href="" class="social-link">
+              <svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
+    </div>
 
     <main>
       <section class="solutions-block">
