--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
           <ul class="our-team-list">
             <li class="our-team-people">
               <img
+                srcset="./images/img-mark.jpg 1x, ./images/img-mark@2x.jpg 2x"
                 src="./images/img-mark.jpg"
                 alt="Mark Guerrero Photo"
                 width="264"
@@ -233,14 +234,15 @@
             </li>
             <li class="our-team-people">
               <img
+                srcset="./images/img-tom.jpg 1x, ./images/img-tom@2x.jpg 2x"
                 src="./images/img-tom.jpg"
                 alt="Tom Ford Photo"
                 width="264"
                 height="260"
               />
               <div class="bottom-point">
-                <h3 class="our-team-name">Mark Guerrero</h3>
-                <p class="our-team-text">Product Designer</p>
+                <h3 class="our-team-name">Tom Ford</h3>
+                <p class="our-team-text">Frontend Developer</p>
                 <ul class="social-list">
                   <li class="social-icon-list">
                     <a href="" class="social-link">
@@ -275,14 +277,18 @@
             </li>
             <li class="our-team-people">
               <img
+                srcset="
+                  ./images/img-camila.jpg    1x,
+                  ./images/img-camila@2x.jpg 2x
+                "
                 src="./images/img-camila.jpg"
                 alt="Camila Garcia Photo"
                 width="264"
                 height="260"
               />
               <div class="bottom-point">
-                <h3 class="our-team-name">Mark Guerrero</h3>
-                <p class="our-team-text">Product Designer</p>
+                <h3 class="our-team-name">Camila Garcia</h3>
+                <p class="our-team-text">Marketing</p>
                 <ul class="social-list">
                   <li class="social-icon-list">
                     <a href="" class="social-link">
@@ -317,14 +323,18 @@
             </li>
             <li class="our-team-people">
               <img
+                srcset="
+                  ./images/img-daniel.jpg    1x,
+                  ./images/img-daniel@2x.jpg 2x
+                "
                 src="./images/img-daniel.jpg"
                 alt="Daniel Wilson Photo"
                 width="264"
                 height="260"
               />
               <div class="bottom-point">
-                <h3 class="our-team-name">Mark Guerrero</h3>
-                <p class="our-team-text">Product Designer</p>
+                <h3 class="our-team-name">Daniel Wilson</h3>
+                <p class="our-team-text">UI Designer</p>
                 <ul class="social-list">
                   <li class="social-icon-list">
                     <a href="" class="social-link">
