--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
       </div>
     </div>
 
-    <script src="/js/modal.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js" src="./"></script>
   </body>
 </html>
